--- a/index.html
+++ b/index.html
@@ -3,31 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel = "stylesheet" href="./style.css">
+    <title>Landing Page</title>
 </head>
 <body>
-    <div>
-        Header Logo
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+    <div class="header">
+        <ul class="header-left">
+            <li>Header Logo</li>
+        </ul>
+        <ul class="header-right">
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link two</a></li>
+            <li><a href="">header link three</a></li>
         </ul>
     </div>
-    <div>
-        <div>
-            <p>This website is awesome</p>
-            <p>This website has some subtext that goes under the main title. It's smaller dont and the color is lower contrast</p>
-            <button>Sign up</button>
+        <div class="main-container">
+            <div class="main-left">
+                <p class="main-text">This website is awesome</p>
+                <p>This website has some subtext that goes under the main title. It's smaller dont and the color is lower contrast</p>
+                <button class="main-signup">Sign up</button>
+            </div>
+            <div>
+                    <img src="./images/doggo1.jpg" alt="Dog Image">
+            </div>   
         </div>
-        <img src="" alt="">
-    </div>
-    <div>
-        <p>Some random information</p>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div class="middle-container">
+        <p class="middle-text">Some random information.</p>
+        <div class = "boxes">
+            <div><div class = "box"></div><p class="subtext">subtext</p></div>
+            <div><div class = "box"></div><p class="subtext">subtext</p></div>
+            <div><div class = "box"></div><p class="subtext">subtext</p></div>
+            <div><div class = "box"></div><p class="subtext">subtext</p></div>
+        </div>
     </div>
     <div>
         <p>This is an inspiring quote</p>
@@ -35,6 +42,6 @@
     <div>Call to action
         <button>Sign up</button>
     </div>
-    <div>Copyright © The Odin Project 2021</div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
