--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 <body>
     <div class="header">
         <ul class="header-left">
-            <li>Header Logo</li>
+            <li>Loving Dogs</li>
         </ul>
         <ul class="header-right">
-            <li><a href="">header link one</a></li>
-            <li><a href="">header link two</a></li>
-            <li><a href="">header link three</a></li>
+            <li><a href="">Foods & Treats</a></li>
+            <li><a href="">Toys</a></li>
+            <li><a href="">FAQ</a></li>
         </ul>
     </div>
+    <div class="container">
         <div class="main-container">
             <div class="main-left">
-                <p class="main-text">This website is awesome</p>
-                <p>This website has some subtext that goes under the main title. It's smaller dont and the color is lower contrast</p>
+                <p class="main-text">Loving a Dog is the Best!</p>
+                <p>We all love our four-legged family members to bits, and we would do anything for them. We love them so much that it is hard to describe. After all, the strongest emotions are those that cannot be put into words.</p>
                 <button class="main-signup">Sign up</button>
             </div>
             <div>
@@ -28,20 +29,26 @@
             </div>   
         </div>
     <div class="middle-container">
-        <p class="middle-text">Some random information.</p>
+        <p class="middle-text">How to Shower your Dog with Love</p>
         <div class = "boxes">
-            <div><div class = "box"></div><p class="subtext">subtext</p></div>
-            <div><div class = "box"></div><p class="subtext">subtext</p></div>
-            <div><div class = "box"></div><p class="subtext">subtext</p></div>
-            <div><div class = "box"></div><p class="subtext">subtext</p></div>
+            <div><div class = "box"><img src="./images/doggoeat.jpg" alt="dog eating" class="box-img"></div><p class="subtext">Give them foods and treats!</p></div>
+            <div><div class = "box"><img src="./images/doggoplay.jpg" alt="dog playing" class="box-img"></div><p class="subtext">A good quality time such as playing in the park</p></div>
+            <div><div class = "box"><img src="./images/doggosleep.jpg" alt="dog sleeping" class="box-img"></div><p class="subtext">Give them a good shelter to sleep on</p></div>
+            <div><div class = "box"><img src="./images/doggopet.jpg" alt="petting dog" class="box-img"></div><p class="subtext">Give them a pat and a belly rub</p></div>
         </div>
     </div>
-    <div>
-        <p>This is an inspiring quote</p>
+    <div class="quote-container">
+        <p class="main-quote">It is amazing how much love and laughter they bring into our lives and even how much closer we become with each other because of them.</p>
+        <p class="quote-author">- John Grogan on dogs</p>
     </div>
-    <div>Call to action
-        <button>Sign up</button>
+    <div class="bottom-container">
+        <div>
+            <p class="bottom-main-text">Call to action! It's time</p>
+            <p class="bottom-subtext">Sign up for our newsletter by clicking that button right over there!</p>
+        </div>
+        <button class="signup">Sign up</button>
     </div>
+    </div>  
     <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
